<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Adaugare">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvMarca">
        </TextView>
        <EditText
            android:id="@+id/marcaET"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:hint="Introduceti marca">
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvAnFabricatie">
        </TextView>
        <EditText
            android:id="@+id/anFabricatieET"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:hint="Introduceti anul de fabricatie">
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvstare">
        </TextView>

        <RadioGroup
            android:id="@+id/stareRG"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/neavariataRB"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/neavariata">
            </RadioButton>
            <RadioButton
                android:id="@+id/avariataRB"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/avariata">
            </RadioButton>
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvDotari">
        </TextView>
        <CheckBox
            android:id="@+id/cameraCB"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/camera">
        </CheckBox>
        <CheckBox
            android:id="@+id/senzoriCB"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/senzori">
        </CheckBox>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvSursaEnergie">
        </TextView>

        <Spinner
            android:id="@+id/sursaEnergieSP"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:entries="@array/sursaEnergie">
        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvTransmisie">
        </TextView>

        <Switch
            android:id="@+id/transmisieSW"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:minWidth="48dp"
            android:textOff="@string/switchOff"
            android:textOn="@string/switchOn"></Switch>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvConditie">
        </TextView>
        <RatingBar
            android:id="@+id/conditieRB"
            android:layout_width="wrap_content"
            android:layout_height="50dp">
        </RatingBar>
    </LinearLayout>

    <Button
        android:id="@+id/btnAdaugare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnAdaugare">
    </Button>
</LinearLayout>